Parser/obj/Debug/RegExpParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\MyPrivateWork\MyApps\MyApplications\EDUFLEX\Parser\RegExpParser.g4 by ANTLR 4.6.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Parser {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.5")]
[System.CLSCompliant(false)]
public partial class RegExpParser : Parser {
	public const int
		ID=1, COLON=2, SEMICOLON=3, WS_DEFAULT=4, LB=5, LBH=6, ENDOFLINE=7, STARTOFLINE=8, 
		STARTCODEANCHOR=9, LP=10, RP=11, QMARK=12, DIESIS=13, ANY_EXCEPT_EOL=14, 
		SEMI=15, ONEORMULTIPLE=16, NONEORMULTIPLE=17, ONEORMULTIPLE_NONGREEDY=18, 
		NONEORMULTIPLE_NONGREEDY=19, ALTERNATION=20, ESCSLASH=21, EXMARK=22, LESS=23, 
		EQUAL=24, WS_REGEXP=25, LITERAL_CHARACTER=26, CLOSURE_FLAG=27, STRING_FLAG=28, 
		CODE=29, ENDCODEANCHOR=30, LCA=31, RAC=32, COMMAC=33, NUMBER=34, WS_CLOSURE=35, 
		SET_LITERAL_CHARACTER=36, HYPTHEN=37, RB=38, CONTROL_CHARACTERS=39, INTEGER=40, 
		WS_SET=41, STRING=42;
	public const int
		RULE_lexerDescription = 0, RULE_regexp_statement = 1, RULE_action_code = 2, 
		RULE_regexp = 3, RULE_regexp_conc = 4, RULE_regexp_closure = 5, RULE_regexp_basic = 6, 
		RULE_assertions = 7, RULE_quantifier = 8, RULE_finate_closure_range = 9, 
		RULE_set = 10, RULE_setitems = 11, RULE_setitem = 12, RULE_setchar = 13, 
		RULE_range = 14, RULE_char = 15;
	public static readonly string[] ruleNames = {
		"lexerDescription", "regexp_statement", "action_code", "regexp", "regexp_conc", 
		"regexp_closure", "regexp_basic", "assertions", "quantifier", "finate_closure_range", 
		"set", "setitems", "setitem", "setchar", "range", "char"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "':'", "';'", null, "'['", "'[^'", "'$'", "'^'", "'{'", "'('", 
		"')'", "'?'", "'#'", "'.'", null, "'+'", "'*'", "'+?'", "'*?'", "'|'", 
		"'\\'", "'!'", "'<'", "'='", null, null, null, null, null, null, "'~{'", 
		null, "','", null, null, null, "'-'", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "ID", "COLON", "SEMICOLON", "WS_DEFAULT", "LB", "LBH", "ENDOFLINE", 
		"STARTOFLINE", "STARTCODEANCHOR", "LP", "RP", "QMARK", "DIESIS", "ANY_EXCEPT_EOL", 
		"SEMI", "ONEORMULTIPLE", "NONEORMULTIPLE", "ONEORMULTIPLE_NONGREEDY", 
		"NONEORMULTIPLE_NONGREEDY", "ALTERNATION", "ESCSLASH", "EXMARK", "LESS", 
		"EQUAL", "WS_REGEXP", "LITERAL_CHARACTER", "CLOSURE_FLAG", "STRING_FLAG", 
		"CODE", "ENDCODEANCHOR", "LCA", "RAC", "COMMAC", "NUMBER", "WS_CLOSURE", 
		"SET_LITERAL_CHARACTER", "HYPTHEN", "RB", "CONTROL_CHARACTERS", "INTEGER", 
		"WS_SET", "STRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RegExpParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public RegExpParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class LexerDescriptionContext : ParserRuleContext {
		public Regexp_statementContext[] regexp_statement() {
			return GetRuleContexts<Regexp_statementContext>();
		}
		public Regexp_statementContext regexp_statement(int i) {
			return GetRuleContext<Regexp_statementContext>(i);
		}
		public LexerDescriptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lexerDescription; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterLexerDescription(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitLexerDescription(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLexerDescription(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LexerDescriptionContext lexerDescription() {
		LexerDescriptionContext _localctx = new LexerDescriptionContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_lexerDescription);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 32; regexp_statement();
				}
				}
				State = 35;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==ID || _la==COLON );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Regexp_statementContext : ParserRuleContext {
		public ITerminalNode COLON() { return GetToken(RegExpParser.COLON, 0); }
		public RegexpContext regexp() {
			return GetRuleContext<RegexpContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(RegExpParser.SEMICOLON, 0); }
		public ITerminalNode ID() { return GetToken(RegExpParser.ID, 0); }
		public Action_codeContext action_code() {
			return GetRuleContext<Action_codeContext>(0);
		}
		public Regexp_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_regexp_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexp_statement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexp_statement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexp_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Regexp_statementContext regexp_statement() {
		Regexp_statementContext _localctx = new Regexp_statementContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_regexp_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ID) {
				{
				State = 37; Match(ID);
				}
			}

			State = 40; Match(COLON);
			State = 41; regexp(0);
			State = 43;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==STARTCODEANCHOR) {
				{
				State = 42; action_code();
				}
			}

			State = 45; Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Action_codeContext : ParserRuleContext {
		public ITerminalNode STARTCODEANCHOR() { return GetToken(RegExpParser.STARTCODEANCHOR, 0); }
		public ITerminalNode CODE() { return GetToken(RegExpParser.CODE, 0); }
		public ITerminalNode ENDCODEANCHOR() { return GetToken(RegExpParser.ENDCODEANCHOR, 0); }
		public Action_codeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_action_code; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterAction_code(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitAction_code(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction_code(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Action_codeContext action_code() {
		Action_codeContext _localctx = new Action_codeContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_action_code);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47; Match(STARTCODEANCHOR);
			State = 48; Match(CODE);
			State = 49; Match(ENDCODEANCHOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RegexpContext : ParserRuleContext {
		public RegexpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_regexp; } }
	 
		public RegexpContext() { }
		public virtual void CopyFrom(RegexpContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Regexp_alternationContext : RegexpContext {
		public RegexpContext regexp() {
			return GetRuleContext<RegexpContext>(0);
		}
		public ITerminalNode ALTERNATION() { return GetToken(RegExpParser.ALTERNATION, 0); }
		public Regexp_concContext regexp_conc() {
			return GetRuleContext<Regexp_concContext>(0);
		}
		public Regexp_alternationContext(RegexpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexp_alternation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexp_alternation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexp_alternation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Regexp_alternation_otherContext : RegexpContext {
		public Regexp_concContext regexp_conc() {
			return GetRuleContext<Regexp_concContext>(0);
		}
		public Regexp_alternation_otherContext(RegexpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexp_alternation_other(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexp_alternation_other(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexp_alternation_other(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RegexpContext regexp() {
		return regexp(0);
	}

	private RegexpContext regexp(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		RegexpContext _localctx = new RegexpContext(_ctx, _parentState);
		RegexpContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_regexp, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Regexp_alternation_otherContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			State = 52; regexp_conc(0);
			}
			_ctx.stop = _input.Lt(-1);
			State = 59;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Regexp_alternationContext(new RegexpContext(_parentctx, _parentState));
					PushNewRecursionContext(_localctx, _startState, RULE_regexp);
					State = 54;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 55; Match(ALTERNATION);
					State = 56; regexp_conc(0);
					}
					} 
				}
				State = 61;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Regexp_concContext : ParserRuleContext {
		public Regexp_concContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_regexp_conc; } }
	 
		public Regexp_concContext() { }
		public virtual void CopyFrom(Regexp_concContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Regexp_concatenationContext : Regexp_concContext {
		public Regexp_concContext regexp_conc() {
			return GetRuleContext<Regexp_concContext>(0);
		}
		public Regexp_closureContext regexp_closure() {
			return GetRuleContext<Regexp_closureContext>(0);
		}
		public Regexp_concatenationContext(Regexp_concContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexp_concatenation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexp_concatenation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexp_concatenation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Regexp_concatenation_otherContext : Regexp_concContext {
		public Regexp_closureContext regexp_closure() {
			return GetRuleContext<Regexp_closureContext>(0);
		}
		public Regexp_concatenation_otherContext(Regexp_concContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexp_concatenation_other(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexp_concatenation_other(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexp_concatenation_other(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Regexp_concContext regexp_conc() {
		return regexp_conc(0);
	}

	private Regexp_concContext regexp_conc(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		Regexp_concContext _localctx = new Regexp_concContext(_ctx, _parentState);
		Regexp_concContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_regexp_conc, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Regexp_concatenation_otherContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			State = 63; regexp_closure(0);
			}
			_ctx.stop = _input.Lt(-1);
			State = 69;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Regexp_concatenationContext(new Regexp_concContext(_parentctx, _parentState));
					PushNewRecursionContext(_localctx, _startState, RULE_regexp_conc);
					State = 65;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 66; regexp_closure(0);
					}
					} 
				}
				State = 71;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Regexp_closureContext : ParserRuleContext {
		public Regexp_closureContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_regexp_closure; } }
	 
		public Regexp_closureContext() { }
		public virtual void CopyFrom(Regexp_closureContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Regexp_closContext : Regexp_closureContext {
		public Regexp_closureContext regexp_closure() {
			return GetRuleContext<Regexp_closureContext>(0);
		}
		public QuantifierContext quantifier() {
			return GetRuleContext<QuantifierContext>(0);
		}
		public Regexp_closContext(Regexp_closureContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexp_clos(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexp_clos(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexp_clos(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Regexp_clos_otherContext : Regexp_closureContext {
		public Regexp_basicContext regexp_basic() {
			return GetRuleContext<Regexp_basicContext>(0);
		}
		public Regexp_clos_otherContext(Regexp_closureContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexp_clos_other(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexp_clos_other(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexp_clos_other(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Regexp_closureContext regexp_closure() {
		return regexp_closure(0);
	}

	private Regexp_closureContext regexp_closure(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		Regexp_closureContext _localctx = new Regexp_closureContext(_ctx, _parentState);
		Regexp_closureContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_regexp_closure, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Regexp_clos_otherContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			State = 73; regexp_basic();
			}
			_ctx.stop = _input.Lt(-1);
			State = 79;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Regexp_closContext(new Regexp_closureContext(_parentctx, _parentState));
					PushNewRecursionContext(_localctx, _startState, RULE_regexp_closure);
					State = 75;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 76; quantifier();
					}
					} 
				}
				State = 81;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Regexp_basicContext : ParserRuleContext {
		public Regexp_basicContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_regexp_basic; } }
	 
		public Regexp_basicContext() { }
		public virtual void CopyFrom(Regexp_basicContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Regexpbasic_parenthesizedContext : Regexp_basicContext {
		public ITerminalNode LP() { return GetToken(RegExpParser.LP, 0); }
		public RegexpContext regexp() {
			return GetRuleContext<RegexpContext>(0);
		}
		public ITerminalNode RP() { return GetToken(RegExpParser.RP, 0); }
		public Regexpbasic_parenthesizedContext(Regexp_basicContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexpbasic_parenthesized(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexpbasic_parenthesized(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexpbasic_parenthesized(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Regexpbasic_setContext : Regexp_basicContext {
		public SetContext set() {
			return GetRuleContext<SetContext>(0);
		}
		public Regexpbasic_setContext(Regexp_basicContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexpbasic_set(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexpbasic_set(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexpbasic_set(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Regexpbasic_anyContext : Regexp_basicContext {
		public ITerminalNode ANY_EXCEPT_EOL() { return GetToken(RegExpParser.ANY_EXCEPT_EOL, 0); }
		public Regexpbasic_anyContext(Regexp_basicContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexpbasic_any(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexpbasic_any(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexpbasic_any(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Regexpbasic_charContext : Regexp_basicContext {
		public CharContext @char() {
			return GetRuleContext<CharContext>(0);
		}
		public Regexpbasic_charContext(Regexp_basicContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexpbasic_char(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexpbasic_char(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexpbasic_char(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Regexpbasic_eolContext : Regexp_basicContext {
		public ITerminalNode ENDOFLINE() { return GetToken(RegExpParser.ENDOFLINE, 0); }
		public Regexpbasic_eolContext(Regexp_basicContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexpbasic_eol(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexpbasic_eol(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRegExpParserVisitor<TResult> typedVisitor = visitor as IRegExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexpbasic_eol(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Regexpbasic_solContext : Regexp_basicContext {
		public ITerminalNode STARTOFLINE() { return GetToken(RegExpParser.STARTOFLINE, 0); }
		public Regexpbasic_solContext(Regexp_basicContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.EnterRegexpbasic_sol(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRegExpParserListener typedListener = listener as IRegExpParserListener;
			if (typedListener != null) typedListener.ExitRegexpbasic_sol(this);
		}
